# UltraHDRViewer_Imgui

./: .gitattributes  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  clone_deps.bat  clone_deps.sh
.sisyphus/drafts/: skill-ultrahdr-viewer.md  ultrahdr-refactor-skill.md
.sisyphus/notepads/task-0.2/: learnings.md
.sisyphus/notepads/ultrahdr-code-refactor/: decisions.md  issues.md  learnings.md  problems.md
.sisyphus/plans/: ultrahdr-code-refactor.md
.sisyphus/run-continuation/: ses_154324b6affe6RiG6iEJMi8BKR.json
android/: build.gradle  gradle.properties  settings.gradle
android/app/: build.gradle  proguard-rules.pro
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  exif_data.h  exif_parser_android.cpp  hdr_types.h  image_data.h  image_loader_android.cpp  native.cpp
android/app/src/main/java/com/uhdrviewer/: MainActivity.java
android/app/src/main/res/values/: strings.xml
src/: app.cpp  app.h  config.h  exif_parser.cpp  exif_parser.h  file_dialog.cpp  file_dialog.h  image_loader.cpp  image_loader.h  log.h  main.cpp  renderer.h  renderer_gl.cpp  renderer_gl.h  renderer_vk.cpp  renderer_vk.h  tonemap.cpp  tonemap.h  ui_panels.cpp  ui_panels.h
tests/: CMakeLists.txt  exif_parser_test.cpp  image_load_test.cpp  main.cpp  tonemap_test.cpp
